feat(crm): complete Lead management system refactoring
- Add derived query methods to LeadRepository
- Add JPQL queries and pagination support
- Add bulk operations with @Modifying
- Refactor LeadService to use database filtering
- Add @Transactional and logging
- Fix JTE templates UUID handling
- Add comprehensive tests (repository, service, controller)

Closes: BCORE-27, BCORE-28