@@ -1,16 +1,20 @@
 package ru.mentee.power.crm.spring.service;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import jakarta.annotation.PostConstruct;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 import ru.mentee.power.crm.model.Lead;
 import ru.mentee.power.crm.model.LeadStatus;
@@ -31,64 +35,52 @@ public class LeadService {
         LOG.info("LeadService @PostConstruct init() called - Bean lifecycle phase");
     }
 
+    // ===== CREATE (добавление) =====
+
+    @Transactional
     public Lead addLead(String name, String email, String company, LeadStatus status) {
-
-        Optional<Lead> existing = repository.findByEmail(email);
-        if (existing.isPresent()) {
-            throw new IllegalStateException("Lead with email already exists: " + email);
-        }
-
-        Lead lead = new Lead(
-                name,
-                email,
-                company,
-                status
-        );
-
-        return repository.save(lead);
+        checkEmailUniqueness(email);
+        Lead lead = new Lead(name, email, company, status);
+        Lead saved = repository.save(lead);
+        LOG.info("Created lead with id: {}, email: {}", saved.id(), saved.email());
+        return saved;
     }
 
+    @Transactional
     public Lead addLead(String email, String company, LeadStatus status) {
-
-        Optional<Lead> existing = repository.findByEmail(email);
-        if (existing.isPresent()) {
-            throw new IllegalStateException("Lead with email already exists: " + email);
-        }
-
-        Lead lead = new Lead(
-                email,
-                company,
-                status
-        );
-
-        return repository.save(lead);
+        checkEmailUniqueness(email);
+        Lead lead = new Lead(email, company, status);
+        Lead saved = repository.save(lead);
+        LOG.info("Created lead with id: {}, email: {}", saved.id(), saved.email());
+        return saved;
     }
 
+    // ===== UPDATE (обновление) =====
+
+    @Transactional
     public Lead update(UUID id, Lead updatedLead) {
+        Lead existing = findLeadByIdOrThrow(id);
 
-        Optional<Lead> existing = repository.findById(id);
-        if (existing.isEmpty()) {
-            throw new ResponseStatusException(
-                    HttpStatus.NOT_FOUND,
-                    "Cannot find lead with id " + id);
-        }
+        existing.setName(updatedLead.name());
+        existing.setEmail(updatedLead.email());
+        existing.setCompany(updatedLead.company());
+        existing.setStatus(updatedLead.status());
 
-        existing.get().setName(updatedLead.name());
-        existing.get().setEmail(updatedLead.email());
-        existing.get().setCompany(updatedLead.company());
-        existing.get().setStatus(updatedLead.status());
-
-        return repository.save(existing.get());
+        Lead saved = repository.save(existing);
+        LOG.info("Updated lead with id: {}", id);
+        return saved;
     }
 
+    // ===== DELETE (удаление) =====
+
+    @Transactional
     public void delete(UUID id) {
-        if (repository.findById(id).isEmpty()) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND,
-                    "Lead with id = " + id + "not exists!");
-        } else {
-            repository.deleteById(id);
-        }
+        findLeadByIdOrThrow(id);
+        repository.deleteById(id);
+        LOG.info("Deleted lead with id: {}", id);
     }
+
+    // ===== READ (чтение) — простые методы =====
 
     public List<Lead> findAll() {
         return repository.findAll();
@@ -99,29 +91,144 @@ public class LeadService {
     }
 
     public Optional<Lead> findByEmail(String email) {
-        return  repository.findByEmail(email);
+        return repository.findByEmail(email);
     }
+
+    // ===== READ — улучшенные методы =====
 
     public List<Lead> findByStatus(LeadStatus status) {
-        return  repository.findAll().stream()
-                .filter(lead -> lead.status().equals(status))
-                .collect(Collectors.toList());
+        return repository.findByStatus(status);
     }
 
-    public List<Lead> findLeads(String name, String email, String company, LeadStatus status) {
-        Stream<Lead> stream = repository.findAll().stream();
-        if (name != null && !name.isBlank()) {
-            stream = stream.filter(lead -> lead.name().toLowerCase().contains(name.toLowerCase()));
+    public List<Lead> findByCompany(String company) {
+        return repository.findByCompany(company);
+    }
+
+    public List<Lead> findByEmailContaining(String emailPart) {
+        if (emailPart == null || emailPart.isBlank()) {
+            return findAll();
         }
-        if (email != null && !email.isBlank()) {
-            stream = stream.filter(lead -> lead.email().toLowerCase().contains(email.toLowerCase()));
+        return repository.findByEmailContaining(emailPart);
+    }
+
+    public List<Lead> findByStatusAndCompany(LeadStatus status, String company) {
+        return repository.findByStatusAndCompany(status, company);
+    }
+
+    public long countByStatus(LeadStatus status) {
+        return repository.countByStatus(status);
+    }
+
+    public boolean existsByEmail(String email) {
+        return repository.existsByEmail(email);
+    }
+
+    public List<Lead> findByStatuses(List<LeadStatus> statuses) {
+        if (statuses == null || statuses.isEmpty()) {
+            return findAll();
         }
-        if (company != null && !company.isBlank()) {
-            stream = stream.filter(lead -> lead.company().toLowerCase().contains(company.toLowerCase()));
+        return repository.findByStatusIn(statuses);
+    }
+
+    public List<Lead> findCreatedAfter(LocalDateTime date) {
+        if (date == null) {
+            return findAll();
         }
+        return repository.findCreatedAfter(date);
+    }
+
+    public List<Lead> findByCompanyOrderedByDate(String company) {
+        return repository.findByCompanyOrderedByDate(company);
+    }
+
+    // ===== ПАГИНАЦИЯ =====
+
+    public Page<Lead> findAllPaged(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
+        return repository.findAll(pageable);
+    }
+
+    public Page<Lead> findByStatusPaged(LeadStatus status, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        return repository.findByStatus(status, pageable);
+    }
+
+    public Page<Lead> findByCompanyPaged(String company, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        return repository.findByCompany(company, pageable);
+    }
+
+    // ===== BULK ОПЕРАЦИИ =====
+
+    @Transactional
+    public int convertNewToContacted() {
+        int updated = repository.updateStatusBulk(LeadStatus.NEW, LeadStatus.CONTACTED);
+        LOG.info("Bulk update: converted {} leads from NEW to CONTACTED", updated);
+        return updated;
+    }
+
+    @Transactional
+    public int deleteByStatusBulk(LeadStatus status) {
+        int deleted = repository.deleteByStatusBulk(status);
+        LOG.info("Bulk delete: removed {} leads with status {}", deleted, status);
+        return deleted;
+    }
+
+    // ===== СЛОЖНЫЙ ПОИСК =====
+
+    public List<Lead> searchLeads(String name, String email, String company, LeadStatus status) {
+        List<Lead> results;
+
         if (status != null) {
-            stream = stream.filter(lead -> lead.status().equals(status));
+            results = repository.findByStatus(status);
+        } else {
+            results = repository.findAll();
         }
-        return stream.collect(Collectors.toList());
+
+        if (name != null && !name.isBlank()) {
+            results = results.stream()
+                    .filter(lead -> lead.name() != null &&
+                            lead.name().toLowerCase().contains(name.toLowerCase()))
+                    .toList();
+        }
+
+        if (email != null && !email.isBlank()) {
+            results = results.stream()
+                    .filter(lead -> lead.email().toLowerCase().contains(email.toLowerCase()))
+                    .toList();
+        }
+
+        if (company != null && !company.isBlank()) {
+            results = results.stream()
+                    .filter(lead -> lead.company().toLowerCase().contains(company.toLowerCase()))
+                    .toList();
+        }
+
+        LOG.debug("Search leads found {} results", results.size());
+        return results;
+    }
+
+    // ===== ВСПОМОГАТЕЛЬНЫЕ ПРИВАТНЫЕ МЕТОДЫ =====
+
+    /**
+     * Проверяет, что email уникален.
+     * @throws IllegalStateException если email уже существует
+     */
+    private void checkEmailUniqueness(String email) {
+        if (repository.existsByEmail(email)) {
+            throw new IllegalStateException("Lead with email already exists: " + email);
+        }
+    }
+
+    /**
+     * Находит лида по ID или бросает исключение.
+     * @throws ResponseStatusException если лид не найден
+     */
+    private Lead findLeadByIdOrThrow(UUID id) {
+        return repository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "Cannot find lead with id " + id
+                ));
     }
 }
